--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
-}
+.container{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  background-image:url("../public/autoImage/Additon.jpg");
+  background-attachment:fixed;
+  
+  background-repeat:repeat;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.body{
+  border:solid grey 2px;
+  border-radius:8px;
+  width:350px;
+  text-align:justify;
+  height:200px;
+  background-color:white;
+  box-shadow: 10px 10px 5px brown;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.topic{
+  color:brown;
+  text-align:center;
 }
