--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   justify-content:center;
   align-items:center;
   height:100vh;
+  
   background-image:url("../public/autoImage/Additon.jpg");
   background-attachment:fixed;
   
@@ -15,7 +16,7 @@
   border-radius:8px;
   width:350px;
   text-align:justify;
-  height:200px;
+  height:auto;
   background-color:white;
   box-shadow: 10px 10px 5px brown;
 }
