--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
   justify-content:center;
   align-items:center;
   height:100vh;
-  
+  width:100vw;
   background-image:url("../public/autoImage/Additon.jpg");
   background-attachment:fixed;
-  
+  background-position: center;
   background-repeat:repeat;
+  
 
 
 }
