--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 .container{
+ 
   display:flex;
   justify-content:center;
   align-items:center;
   height:100vh;
-  width:100vw;
+ 
+  flex-direction:column;
   background-image:url("../public/autoImage/Additon.jpg");
-  background-attachment:fixed;
+  
   background-position: center;
   background-repeat:repeat;
+ 
   
 
 
@@ -17,7 +20,7 @@
   border-radius:8px;
   width:350px;
   text-align:justify;
-  height:auto;
+  min-height:auto;
   background-color:white;
   box-shadow: 10px 10px 5px brown;
 }
